--- a/views/base.pug
+++ b/views/base.pug
@@ -1,45 +1,28 @@
-doctype html 
+doctype html
 html
-    head
-        meta(charset='UTF-8')
-        meta(name='viewport' content='width=device-width, initial-scale=1.0')
-        title Natours | #{tour}  
-        link(rel='stylesheet' href='css/style.css')
-        link(rel='shortcut icon' type='img/png' href='img/favicon.png')
-        link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
-
-    body
-        // header
-
-        header.header
-            nav.nav.nav--tours
-                a.nav__el(href='#') All tours
-            .header__logo 
-                img(src='img/logo-white.png' alt='Natours logo')
-            nav.nav.nav.user 
-                //- a.nav__el(href='#') My bookings
-                //- a.nav__el(href='#')
-                //-     img(src='img/logo-white.png' alt='Natours logo')
-                //-     span jonas
-                button.nav__el Log in
-                button.nav__el.nav__el--cta Sign up
-
-        // CONTENT
-        main.overview
-            h1=tour
-        // FOOTER
-        .footer 
-            .footer__logo
-                img(src='img/logo-green.png' alt='Natours logo')
-            ul.footer__nav 
-                li: a(href='#') About us
-                li: a(href='#') Download apps
-                li: a(href='#') Become a guide
-                li: a(href='#') Careers
-                li: a(href='#') Contact
-
-            p.footer__copyright &copy; by Jonas Schmedtmann. All rights reserved.
-                
+  head
+      meta(charset='UTF-8')
+      meta(name='viewport' content='width=device-width, initial-scale=1.0')
+      link(rel='stylesheet' href='/css/style.css')
+      link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
+      link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
+      title Natours | #{title}
+  
+  body
+    // HEADER
+    include _header
+        
+    // CONTENT
+    block content 
+      h1 This is the placeholder 
+      
+    // FOOTER
+    include _footer
+    
+    //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js')
+    //- script(src='/js/mapbox.js')
+    //- script(src='/js/login.js')
+    //- script(src='/js/bundle.js')
 
    
       
